<resources>
    <string name="app_name">BookHub</string>
    <string name="dashboard">DashBoard</string>
    <string name="favourites">Favourites</string>
    <string name="profile">Profile</string>
    <string name="about_the_app">About the app</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dasboard_fragment">Dasboard Fragment</string>
    <string name="favourites_fragment">Favourites fragment</string>
    <string name="profile_fragment">Profile fragment</string>
    <string name="about_app">About app</string>
    <string name="list_item">LIST ITEM</string>
    <string name="name_of_the_book">Name of the book</string>
    <string name="name_of_the_author">Name of the Author</string>
    <string name="rs_299">Rs. 299</string>
    <string name="_4_5">4.5</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="about_the_book">About The Book</string>
    <string name="add_to_favourites">Add to Favourites</string>
</resources>